# Try

./: CMakeLists.txt  learn.cpp  main.cpp  mainwindow.cpp  mainwindow.h
learn/: namespace.cpp
